# dominions-slack-bot

./: .dockerignore  .env.example  .gitignore  .op  .pre-commit-config.yaml  .tool-versions  README.md  catalog-info.yaml  docker-compose.yml  dockerfile  pyproject.toml  setup.cfg
.github/workflows/: build.yml  deploy.yml
migrations/models/: 0_20240204230059_init.py  0_20240205154802_init.py  0_20240205223449_init.py  0_20240206095801_init.py  1_20220220232609_update.sql  1_20240205165132_update.py  1_20240206120049_update.py  2_20220220232749_update.sql
src/: main.py
src/commands/: base.py  check_commands.py  command_factory.py  game_commands.py  help_commands.py  player_commands.py  turn_commands.py
src/controllers/: command_parser.py  command_parser_test.py  formatting.py  formatting_test.py  games.py  grog.py  lobby_details.py  lobby_details_test.py  lobby_details_v2.py  mad.py  server_status.py  snek_status.py
src/handlers/: __init__.py  interactions.py
src/models/: __init__.py  lobby_details.py  nation.py  player_status.py  server_details.py  snek_server_details.py
src/models/app/: lobby_details.py  player_status.py  player_status_test.py
src/models/database/: __init__.py  game.py
src/models/dataclasses/: nation.py  snek_server_details.py  snek_server_status.py
src/models/db/: __init__.py  base.py  games.py  players.py
src/responders/: __init__.py  grog.py  grog_test.py
src/responses/: grog.py  mad.py
src/tasks/: update_games.py
src/tests/: command_parser_test.py  formatter_test.py  formatting_test.py  lobby_details_test.py  responder_test.py  snek_status__test.py
src/tests/responses/: player_status.json  server_status_pretender_upload.json  server_status_running.json  server_status_starting.json
src/utils/: aiohttp_manager.py  async_manager.py  constants.py  db_manager.py  log_manager.py  slack_manager.py  socket_request_constants.py
